# decuen-old

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py  tox.ini
decuen/: __init__.py
decuen/agents/: __init__.py  agent.py
decuen/agents/discrete/: __init__.py  ddqn.py  discrete_agent.py  dqn.py  rainbow.py
decuen/experience/: __init__.py  deque_experience_manager.py  experience.py  experience_manager.py  prioritized_experience_manager.py
decuen/policies/: __init__.py  epsilon_greedy_policy.py  greedy_policy.py  policy.py
scripts/: aigym.py
tests/: test_sanity.py
