[metadata]
name = decuen
version = attr: decuen.VERSION
url = https://github.com/ziyadedher/dequen

author = Ziyad Edher
author_email = ziyad.edher@gmail.com
maintainer = Ziyad Edher
maintainer_email = ziyad.edher@gmail.com

description = Deep Q-Learning library built in modern Python for learning, ease-of-use, modularity, an extensibility.
keywords = python, machine-learning, deep-learning, deep-neural-network, deep-reinforcement-learning, deep-q-network, deep-q-learning
long-description = file: README.md
license = MIT
license-file = LICENSE

platform = any
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: MIT License
  Typing :: Typed

[options]
packages = find:
zip_safe = false

setup_requires =
  setuptools >= 40
  wheel
  pytest_runner

install_requires =
  tensorflow-gpu==2.0.0a0

python_requires =
  >= 3.7

tests_requires =


[options.extras_require]
test =
  pylint
  flake8
  flake8-mypy
  flake8-type-annotations
  flake8-annotations-coverage
  flake8-annotations-complexity
  flake8-isort
  flake8-bugbear
  flake8-pytest
  flake8-bandit
  flake8-polyfill
  flake8-pyi
  flake8-builtins
  flake8-comprehensions
  flake8-logging-format
  flake8-commas
  cohesion
  mypy
  pytest
  pytest-cov
  coverage
  hypothesis
  tox

[aliases]
test = pytest


[flake8]
doctests = True
statistics = True
max-line-length = 120
select = E, F, W, C, H, D


[pylint]


[mypy]
follow_imports = silent
follow_imports_for_stubs = True
disallow_any_unimported = True
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
show_none_errors = True
warn_redundant_casts = True

[isort]
